--- a/BattleCity/.classpath
+++ b/BattleCity/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/Juan/Desktop/Estructura/TDALista.jar"/>
+	<classpathentry kind="lib" path="Jar/TDALista2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
